src/ui/snapshots/coxtop__ui__tests__the_confirm_dialog_is_drawn_in_the_harbor_light_theme.snap
---
source: src/ui/mod.rs
assertion_line: 517
expression: "excerpt(&app, ThemeId::HarborLight, &[15..23, 39..40])"
---
╭ 6 queue ──────────────────────────────────────────────────────────╮╭ inbox ──────────────────────────────────────────╮
│  dash-feed-streams-a-versioned-json-snaps… ████████████ 0/3 phases││needs_chair some-task budget stop after 2 attempt│
│                             ┌Kill run dash-feed-1──────────────────────────────────────┐                             │
│                             │ $ cox runs stop dash-feed-1                              │                             │
│                             │                                                          │                             │
│                             │ y run    n cancel                                        │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
╰───────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────╯
1-6 frames · ←→ focus · ↑↓ select · ⏎ drill down · t theme · p layout · q quit │ p pause  k kill  m move · : palette
