src/ui/snapshots/coxtop__ui__tests__the_confirm_dialog_is_drawn_over_the_regatta_page.snap
---
source: src/ui/mod.rs
assertion_line: 915
expression: text
---
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ 6 queue ──────────────────────────────────────────────────────────╮╭ 9 inbox ────────────────────────────────────────╮
│  dash-feed-streams-a-version┌Kill run dash-feed-1──────────────────────────────────────┐k budget stop after 2 attempt│
│                             │ $ cox runs stop dash-feed-1                              │                             │
│                             │                                                          │                             │
│                             │ y run    n cancel                                        │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
╰───────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────╯
1-9 frames · ←→ focus · ↑↓ select · ⏎ drill down │ p pause  k kill  m move · : palette  w watch  $ spend  h health
