src/ui/snapshots/coxtop__ui__tests__the_form_is_drawn_with_its_confirm_over_it.snap
---
source: src/ui/mod.rs
assertion_line: 878
expression: text
---
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ 6 queue ──────────────────┌Add machine───────────────────────────────────────────────────┐───────────────────────────╮
│  dash-feed-streams-a-versi│ ┌Add machine edge-1, then run cox host doctor edge-1───────┐ │budget stop after 2 attempt│
│                           │ │ $ cox host add edge-1 --ssh pat@edge-1 --capacity 4      │ │                           │
│                           │ │                                                          │ │                           │
│                           │ │ y run    n cancel                                        │ │                           │
│                           │ └──────────────────────────────────────────────────────────┘ │                           │
╰───────────────────────────│ Tab next  Enter confirm  Esc cancel                          │───────────────────────────╯
╭ 8 run cost ───────────────└──────────────────────────────────────────────────────────────┘───────────────────────────╮
│$2  │                                                                                                    ┌───────────┐│
│    │                                                                                                    │dash-feed-1││
1-6 frames · ←→ focus · ↑↓ select · ⏎ drill down · t theme · v layout · q quit │ p pause  k kill  m move · : palette
