src/ui/snapshots/coxtop__ui__tests__the_palette_frame_is_drawn_with_its_output.snap
---
source: src/ui/mod.rs
assertion_line: 541
expression: text
---
╭┌cox─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐╮
││$ cox runs stop dash-feed-1                                                                                         ││
││stopped dash-feed-1                                                                                                 ││
╰│exit 0                                                                                                              │╯
╭│                                                                                                                    │╮
││                                                                                                                    ││
││Up Down scroll    Esc close                                                                                         ││
╰└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘╯
stopped dash-feed-1
