src/ui/snapshots/coxtop__ui__tests__the_palette_prompt_is_drawn_over_the_regatta_page.snap
---
source: src/ui/mod.rs
assertion_line: 525
expression: "excerpt(&app, ThemeId::Regatta, &[37..40])"
---
│no runs ended yet                                                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
:route list
