src/ui/snapshots/coxtop__ui__tests__the_settings_screen_replaces_the_page_over_a_loaded_snapshot.snap
---
source: src/ui/mod.rs
assertion_line: 686
expression: text
---
> budgets              budgets
                       > max_usd  20  f.toml  git-tracked

                       staged
                         nothing staged


































Up/Down section   Tab next pane   r reload   Esc close
